fixed z-index bug

--- a/app/assets/stylesheets/pages/_dog_index.scss
+++ b/app/assets/stylesheets/pages/_dog_index.scss
@@ -1,7 +1,6 @@
 .dog-index {
   min-height: calc(100vh - 163.97px);
   position: relative;
-  z-index: -1;
 }
 
 .cards {
